@@ -268,7 +268,8 @@ void modify_undo_bug()
    select_all();
    punselect({{3.5,10.5},{13,-4.5}});
    move({11.5,8},{18,10.5});
-//   undo();
+   undo();
+   echo("6 sqare boxes should be displayed");
 }
 
 //int factoriel(int stop)
